--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -32,6 +32,22 @@ world2032161 {
 }
 
 
+world62997040 {
+    # Show the list of bookmarks next to open GUIs.
+    B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=false
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=@mysticalworld egg
+
+    # Show the list of ingredients next to open GUIs.
+    B:overlayEnabled=true
+}
+
+
 world77167617 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=false
