--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -3,17 +3,10 @@
 ~CONFIG_VERSION: 0.1.0
 
 world-1109892483 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=false
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
     S:filterText=flour
-
-    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
@@ -41,7 +34,7 @@ world62997040 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=@mysticalworld egg
+    S:filterText=@thermalfoundation gold
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
