--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -34,7 +34,7 @@ world62997040 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=@thermalfoundation gold
+    S:filterText=torch
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
