Matchbox as flint and steel
It now burns stuff, yippie

--- a/config/realistictorches.cfg
+++ b/config/realistictorches.cfg
@@ -2,7 +2,7 @@
 
 general {
     # Set this to true to enable matchboxes lighting fires in the world like flint and steel.
-    B:matchbox.createsFire=false
+    B:matchbox.createsFire=true
 
     # The durability of the matchbox. Setting this to a negative value will result in unlimited uses.
     I:matchbox.durability=64
@@ -58,6 +58,8 @@ light_sources {
 remove_recipes {
     # A list blocks and items of remove the recipes of.
     S:recipes.removeRecipes <
+        minecraft:torch
+        tconstruct:stone_torch
      >
 }
 
