Seasons for Atum, removed maple tree and berries

--- a/config/natura.cfg
+++ b/config/natura.cfg
@@ -10,34 +10,34 @@ enable-disable {
     B:"Generate Amaranth Trees"=true
     B:"Generate Ash Clouds"=true
     B:"Generate Barley Crops"=true
-    B:"Generate Blackberry Bushes"=true
-    B:"Generate Blightberry Bushes"=true
+    B:"Generate Blackberry Bushes"=false
+    B:"Generate Blightberry Bushes"=false
     B:"Generate Bloodwood Trees"=true
     B:"Generate Blue Glowshroom"=true
     B:"Generate Bluebell Flowers"=true
-    B:"Generate Blueberry Bushes"=true
+    B:"Generate Blueberry Bushes"=false
     B:"Generate Cotton Crops"=true
     B:"Generate Dark Clouds"=true
     B:"Generate Darkwood Trees"=true
-    B:"Generate Duskberry Bushes"=true
+    B:"Generate Duskberry Bushes"=false
     B:"Generate Fusewood Trees"=true
     B:"Generate Ghostwood Trees"=true
     B:"Generate Glowshroom Trees"=true
     B:"Generate Green Glowshroom"=true
     B:"Generate Heat Sand"=true
     B:"Generate Hopseed Trees"=true
-    B:"Generate Maloberry Bushes"=true
+    B:"Generate Maloberry Bushes"=false
     B:"Generate Maple Trees"=true
     B:"Generate Overworld Clouds"=true
     B:"Generate Purple Glowshroom"=true
-    B:"Generate Raspberry Bushes"=true
+    B:"Generate Raspberry Bushes"=false
     B:"Generate Redwood Trees"=false
     B:"Generate Saguaro Cactus"=true
     B:"Generate Sakura Trees"=true
     B:"Generate Silverbell Trees"=true
-    B:"Generate Skyberry Bushes"=true
+    B:"Generate Skyberry Bushes"=false
     B:"Generate Small Eucalyptus Trees"=true
-    B:"Generate Stingberry Bushes"=true
+    B:"Generate Stingberry Bushes"=false
     B:"Generate Sulfur Clouds"=true
     B:"Generate Tained Soil"=true
     B:"Generate Thornvines"=true
