--- a/config/forestry/arboriculture.cfg
+++ b/config/forestry/arboriculture.cfg
@@ -344,7 +344,7 @@ trees {
         }
 
         treemaple {
-            D:rarity=0.0024999999441206455
+            D:rarity=1.0
 
             dimensions {
                 I:blacklist <
