No coin stack an no coin from mobs

--- a/config/ordinarycoins.cfg
+++ b/config/ordinarycoins.cfg
@@ -1884,10 +1884,10 @@
 
 main {
     # How many coins should be in a stack? (100 means that 1 silver coin = 100 bronze coins, 1 gold = 100 silver)
-    I:coinsStackSize=64
+    I:coinsStackSize=9999
 
     # Enable or disable coins drops from mobs
-    B:drop=true
+    B:drop=false
 }
 
 
