--- a/config/exoticbirds.cfg
+++ b/config/exoticbirds.cfg
@@ -500,7 +500,7 @@ worldgen {
      >
 
     # How frequently nests should spawn in the world. (0 = disabled) [range: 0 ~ 500, default: 60]
-    I:genRate=3
+    I:genRate=15s
 
     # Allow phoenix dust to generate in dungeons and minecarts [default: true]
     B:generateDungeonItems=true
