added lit flower pot betweenlands

--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -16,18 +16,26 @@ world1544803905 {
 }
 
 
-world2032161 {
-    # Show the list of bookmarks next to open GUIs.
-    B:bookmarkOverlayEnabled=true
+world1766060265 {
+    B:bookmarkOverlayEnabled=false
 
     # Give items instead of showing the recipe.
     B:cheatItemsEnabled=false
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=inferium
+    S:filterText=@betweenlands
 
     # Show the list of ingredients next to open GUIs.
+    B:overlayEnabled=true
+}
+
+
+world2032161 {
+    B:bookmarkOverlayEnabled=false
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=tinker book
     B:overlayEnabled=true
 }
 
