Allowed Bone Meal, reallowed shovels and seasons

--- a/config/thebetweenlands/config.cfg
+++ b/config/thebetweenlands/config.cfg
@@ -125,6 +125,7 @@ general {
 
     # A list of items that should be allowed to fertilize plants in the dimension. Syntax is "modid:itemname:meta", meta can be * for wildcard, if no meta is provided 0 is used
     S:fertilizer_whitelist <
+        minecraft:dye:15
      >
 
     # A list of items that should not be able to create fire in the dimension. Syntax is "modid:itemname:meta", meta can be * for wildcard, if no meta is provided 0 is used
