--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -18,13 +18,23 @@ world1544803905 {
 
 world1766060265 {
     B:bookmarkOverlayEnabled=false
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=@betweenlands
+    B:overlayEnabled=true
+}
+
+
+world1965003004 {
+    # Show the list of bookmarks next to open GUIs.
+    B:bookmarkOverlayEnabled=true
 
     # Give items instead of showing the recipe.
     B:cheatItemsEnabled=false
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=@betweenlands
+    S:filterText=
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
@@ -36,6 +46,22 @@ world2032161 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
     S:filterText=tinker book
+    B:overlayEnabled=true
+}
+
+
+world2076053 {
+    # Show the list of bookmarks next to open GUIs.
+    B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=false
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=
+
+    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
